add operator version label to test cr

--- a/installation.yaml
+++ b/installation.yaml
@@ -3,3 +3,5 @@ kind: Installation
 metadata:
   name: george
   namespace: default
+  labels:
+    installation-operator.giantswarm.io/version: "0.0.1"
